--- a/Biblio.org
+++ b/Biblio.org
@@ -382,8 +382,13 @@
    \end{equation}
    with $x=1$ or $x=2$ (they give solution for both settings).
 
+   
+
    \citet{chajewska2001learning}'s work acknowledge \citet{ng2000algorithms} work and uses it for comparison purpose. However, the approach they suggest leads (if I read correctly) to the same $J$ function and the same algorithm as in \citep{ramachandran2007bayesian}, only 6 years earlier. I don't know why this paper has not been acknowledged by the IRL community. Maybe the framing of the problem as a decision tree (and not an MDP) and the use of unusual keywords were enough for it to stay unnoticed.
    
+
+   
+   Un autre algo Bayesien, G-MH a été publié dans \citep{rothkopf2008modular}. Cette approche généralise le travail de \citet{ramachandran2007bayesian}.
 * Learning from Observation/Demonstration
   Une tentative d'unification est présentée en \cite{montana2011towards}. Autant le survey est utile, autant je reste circonspect tant aux maths du papier, qui laissent un peu l'IRL à l'écart en ne tenant pas compte du fait que les états respectent le critère de Markov. A revérifier.
 
