lu snel2011multi

--- a/Biblio.org
+++ b/Biblio.org
@@ -446,7 +446,11 @@
 
    
    
-   Dans le cas multi agent, l'algorithme BITER \citep{boutsioukis2011transfer} propose une solution basée sur un biais de la valeur initiale de l'algorithme d'apprentissage par renforcement.
+   Dans le cas multi agent, l'algorithme BITER \citep{boutsioukis2011transfer} propose une solution basée sur un biais de la valeur initiale de V ou Q dans l'algorithme d'apprentissage par renforcement.
+
+
+
+   Ce biais est équivaent à l'utilisation d'une fonction de shaping de la reward. Ce point, ainsi que l'importance de la sélection des features dans la représentation de la fonction de shaping est discuté dans \citep{snel2011multi}, qui ne présente malheureusement pas d'algorithmes utilisables pour résoudre les problèmes soulevés.
 * Theoretical tools
 ** Multi-kernel Gaussian Processes
    Pas tout compris : \cite{melkumyan2009multi}
