--- a/Biblio.org
+++ b/Biblio.org
@@ -187,6 +187,10 @@
    DetH* est un algo proposé par \citep{barry2011deth}. Il s'agit de factoriser les MDPs avant de les résoudre approximativement. L'algo de clustering utilisé lors de la factorisation peut s'avérer intéressant pour faire de la réduction de dimension.
 ** Competitive strategies for Value function approximation
    \cite{agostini2011competitive} propose une technique de mise en compétition de différents approximateurs. A chaque approximateur est associé une fonction de pertinence. Chaque approimateur est défini sur une partie de l'espace, certains sont ajoutés en cas de lacune, d'autres enlevés en cas de redondance. La fonction de valeur est ainsi approximée par l'approximateur le plus pertinent à l'endroit où l'on souhaite avoir sa valeur. Cette notion d'approximateur local et de pertinence pourrait s'avérer utile lors de la construction de feature.
+** Learning from advice
+   In order to speed up learning, work has been done in order to give more information than just the reward.
+
+   \citet{korupolu2011beyond} present a framework for learning from sporadic instructions from a human.
 * IRL
 ** Overview
   The problem has been suggested in \citep{russell1998learning} and properly defined in \citep{ng2000algorithms}. An eminent seminal work is \citep{abbeel2004apprenticeship}, which introduce the feature expectation $\mu$ under its canonical name.
